# Miscellaneous-Projects

./: .gitignore  README.md
AfriMCQA/: README.md  main.py  pyproject.toml
AfriMCQA/data/: README.md  move_data.sh
AfriMCQA/experiments/: aya_evaluation.py  base_evaluation.sh  experiment_scoring.py  gpt_evaluation.py  llm_scoring.py  models_heatmap.py
AfriMCQA/playground/: afri-mcqa dataset.ipynb  data_augmentation.ipynb  qwen_test.ipynb  test-ayavision.ipynb  test_openai_key.py  test_qwen2.py
AfriMCQA/prompts/: prompt_VQA_EN_question.txt  prompt_VQA_Hausa_question.txt  prompt_VQA_Kinyarwanda_question.txt  prompt_VQA_Lingala_question.txt  prompt_VQA_Twi_question.txt  prompt_VQA_Yoruba_question.txt  prompt_text_EN_only.txt  prompt_text_african_only.txt  prompt_text_both.txt  prompt_vqa_EN_only.txt  prompt_vqa_african_only.txt  prompt_vqa_both.txt
AfriMCQA/scripts/: augment_data.py  buckets.sh  evaluate_gpt_vqa.py  evaluate_qwen_vqa.py
AfriMCQA/utils/: cost_estimation.py
CarSegmentation/: .gitignore  README.md  makefile  pyproject.toml
CarSegmentation/playground/: car_segmentation.ipynb  fine-tune mnist.ipynb  fine-tune.ipynb
CarSegmentation/src/: train.py
CarSegmentation/src/augmentations/: car.py
CarSegmentation/src/configs/: load.py
CarSegmentation/src/data/: __init__.py  upload.py
CarSegmentation/src/loggers/: __init__.py  mlflow_lightning_loggers.py  mlflow_loggers.py
CarSegmentation/src/metrics/: segmentation.py
CarSegmentation/src/optimizers/: adam.py
CompetingT2P/: MlflowInferenceHandler.py  pyproject.toml  requirements.txt
CompetingT2P/playground/: Cleanup.ipynb  Dimensionality Reduction.ipynb  Ensemble.ipynb  Holidays.ipynb  Multi-Step-Forecasting.ipynb  Network Ensemble.ipynb  Network Weekly Ensemble.ipynb  NetworkInference.ipynb  Regressions.ipynb  Weekly Ensemble - Categorical .ipynb
EuroCrops/: README.md  docker-compose.yml  makefile  pyproject.toml  requirements.txt
EuroCrops/playground/: exploration.ipynb
FrisbeeSemanticSegmentation/: .gitignore  README.md  makefile  pyproject.toml  requirements.txt
FrisbeeSemanticSegmentation/playground/: exploration.ipynb  jersey-number-ocr.ipynb  siglip-embeddings.ipynb  test_annotation.py  test_player_movements.py  test_video.py
FrisbeeSemanticSegmentation/src/: constants.py  field_homography.py  main.py  player_detection.py  player_position_tracker.py  team_assignment.py
GuidedTextToSpeech/: pyproject.toml
GuidedTextToSpeech/playground/: qwen-tts.ipynb
OrganicSubstractionModel/: README.md  pyproject.toml
OrganicSubstractionModel/costs/: event_costs.sql
OrganicSubstractionModel/ddl/: model_selection.sql  table_schema.sql
OrganicSubstractionModel/models/: t2p_mobile.sql
OrganicSubstractionModel/notes/: organic_calculation.md  troubleshoots.md
OrganicSubstractionModel/playground/: Organics Overall Audit.ipynb  Organics platform-country Audit.ipynb
OrganicSubstractionModel/queries/: appsflyer_aggregate_comparison.sql  asa_tv_double_counting.sql  geobydate_aggregates.sql  google_attribution.sql  google_skan_null_conversion_weekly.sql  join_daily_weekly.sql  mixpanel_aggregate_comparison.sql  organic_android.sql  organic_estimation_android.sql  organic_estimation_android2.sql  organic_estimation_ios.sql  organic_estimation_ios2.sql  organic_estimation_ios_us.sql  t.sql  t2p_estimate_from_prefinal.sql  t2p_geobydate_internal_comparison.sql  t2p_internal_geobydate_comparison.sql  t2p_weekly_estimate_from_prefinal.sql  total_aggregate_comparison.sql  weekly_asa_tv_double_counting.sql  weekly_google_tv_double_counting.sql
OrganicSubstractionModel/stored_procedures/: sp_organic_estimation_android.sql  sp_organic_estimation_ios.sql
OrganicSubstractionModel/troubleshoots/: total_aggregate_comparison_us.sql
OrganicSubstractionModel/views/: appsflyer_aggregate_comparison_discounted_view.sql  appsflyer_aggregate_comparison_view.sql  model_selection_join.sql  organic_estimation_all_view.sql  organic_estimation_android2_view.sql  organic_estimation_android3_view.sql  organic_estimation_android_view.sql  organic_estimation_ios_view.sql  total_aggregate_comparison_view.sql  trial2paid_geobydate_unique.sql
PlusGradeAssignment/: .gitignore  README.md  prez.md  pyproject.toml
PlusGradeAssignment/playground/: EDA.ipynb  M2_points_purchased.ipynb  M2_two_towers.ipynb  auto_EDA.ipynb  pandas-profiling.ipynb  review_predictions.ipynb  yellowbrick.ipynb
PlusGradeAssignment/prompts/: CLAUDE_PLAN_EDA.md  EDA.md  GPT_DynamicPricingEDAFeatureEngineering_Workflow.md  feature_selection.md  initial_code.md
PlusGradeAssignment/reports/: short_written_explanation.md
PlusGradeAssignment/src/: config.py  main.py
SaturationCurves/: .gitignore  Dockerfile  README.md  credentials.sh  deployment.sh  docker-entrypoint.sh  gui.py  makefile  organics_exploration.py  pyproject.toml  query.py
SaturationCurves/playground/: appsflyer-cohort.ipynb  appsflyer_master_api.ipynb  gui.py
SaturationCurves/src/: Pages.py  appsflyers.py  constants.py  curves.py  date_utils.py  filters.py  plots.py  queries.py  utils.py
SpatialThoughts/: README.md  pyproject.toml
SpatialThoughts/playground/: masking_cloud.ipynb  odc-stac.ipynb  spectral_indices.ipynb  stac_data_load.ipynb  viz.ipynb
UnetScratch/: README.md  notes.md  pyproject.toml
UnetScratch/image_segmentation/: datasets.py  metrics.py  train.py
UnetScratch/playground/: Fine-Tuning on another dataset.ipynb  Image Segmentation - Clouds.ipynb  dummy_train.py  naive_job_submission.py  requirements.txt
UnetScratch/sft/: prompt_instruction.py  train.py
WellhubQueries/: .gitignore  pyproject.toml
WellhubQueries/playground/: Money-Jan2025-March2025.ipynb  Money.ipynb  Money2.ipynb  Money_20260511.ipynb  wellhub-jan2026-feb2026.py
WellhubQueries/queries/: queries1.sql  queries2.sql  queries3.sql  queries4.sql
WellhubQueries/src/: constants.py  main.py  mixpanel.py  wellhub_dua.py
sigproc/: .gitignore  README.md  makefile  pyproject.toml
sigproc/playground/: freq_domain.py  niquist_sampling.py  psd.py  qpsk.py  spectogram.py  wobbit.py
(+867 files in other folders)
