[project]
name = "carsegmentation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # "albumentations>=2.0.8",
    "albumentations>=1.4.2",
    "matplotlib>=3.10.8",
    "notebook>=7.5.1",
    "numpy>=1.23.0,<1.27.0", # numpy version <2 for macos - 2.4.1 to work with cv2
    # "numpy==2.4.1",
    # "numpy==2.0.0",
    "opencv-python>=4.11.0.86", # cv2
    "segmentation-models-pytorch>=0.5.0",
    "torch==2.2.2", # torch version for macos
    "torchaudio>=2.2.2",
    "torchvision>=0.17.2",
]
