[project]
name = "carsegmentation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # "albumentations>=2.0.8",
    "albumentations>=1.4.2",
    "google-cloud-secret-manager>=2.26.0",
    "google-cloud-storage>=3.8.0",
    "lightning>=2.6.0",
    "matplotlib>=3.10.8",
    "mlflow>=3.8.1",
    "notebook>=7.5.1",
    "numpy>=1.23.0,<1.27.0", # numpy version <2 for macos - 2.4.1 to work with cv2
    # "numpy==2.4.1",
    # "numpy==2.0.0",
    "opencv-python>=4.11.0.86", # cv2
    "pillow>=12.1.0",
    "pyarrow>=22.0.0",
    "python-dotenv>=1.2.1",
    "segmentation-models-pytorch>=0.5.0",
    "torch==2.2.2", # torch version for macos
    "torchaudio>=2.2.2",
    "torchvision>=0.17.2",
    "tqdm>=4.67.1",
]
