[project]
name = "eurocrops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.1",
    "geopandas>=1.1.3",
    "geoparquet>=0.0.3",
    "pillow>=12.1.1",
    "rasterio>=1.5.0",
    "s3fs>=2026.2.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.3.0",
]
