[project]
name = "guidedtexttospeech"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "notebook>=7.5.5",
    "qwen-tts>=0.1.1",
    "torch>=2.11.0",
]

[build-system]
# requires = ["setuptools", "wheel", "torch"]
requires = ["torch"]
