[project]
name = "organicsubstractionmodel"
version = "0.1.0"
description = "Computing Organics using substraction model"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "db-dtypes>=1.5.0",
    "duckdb>=1.4.3",
    "google-cloud-bigquery>=3.40.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
]
