[project]
name = "spatialthoughts"
version = "0.1.0"
description = "Notebooks for spatial thoughts"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cartopy>=0.25.0",
    "folium>=0.20.0",
    "geopandas>=1.1.2",
    "matplotlib>=3.10.8",
    "notebook>=7.5.3",
    "pandas>=3.0.0",
    "rioxarray>=0.21.0",
    "xarray>=2025.11.0",
]
