[project]
name = "spatialthoughts"
version = "0.1.0"
description = "Notebooks for spatial thoughts"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bokeh>=3.1.0",
    "cartopy>=0.25.0",
    "dask[distributed]>=2026.1.2",
    "folium>=0.20.0",
    "geopandas>=1.1.2",
    "jupyter-server-proxy>=4.4.0",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.8",
    "notebook>=7.5.3",
    "odc-stac[botocore]>=0.5.2",
    "pandas>=3.0.0",
    "pystac-client>=0.9.0",
    "rioxarray>=0.21.0",
    "xarray>=2025.11.0",
]
