[project]
name = "wellhubqueries"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "notebook>=7.5.6",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "polars[rtcompat]>=1.40.1",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
]
