[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sigproc"
version = "0.1.0"
description = "Signal Processing Project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "pillow>=12.0.0",
    "scipy>=1.15.3",
]

[project.scripts]
palewav = "sigproc.palewav:run"

[tool.hatch.build]
packages = ["src/sigproc"]
