[project]
name = "sigproc"
version = "0.1.0"
description = "Signal Processing Project"
readme = "README.md"
authors = [
    { name = "yukikongju", email = "yukikongju@outlook.com" }
]
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.7",
    "opencv-python>=4.12.0.88",
    "pillow>=12.0.0",
    "scipy>=1.15.3",
]

[project.scripts]
palewav = "sigproc.palewav:run"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
