[project]
name = "sigproc"
version = "0.1.0"
description = "Signal Processing Project"
readme = "README.md"
authors = [
    { name = "yukikongju", email = "yukikongju@outlook.com" }
]
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "pillow>=12.0.0",
    "pyaudio>=0.2.14",
    "scipy>=1.15.3",
]

[project.scripts]
palewav = "sigproc.palewav:run"
invpalewav = "sigproc.invpalewav:run"
denoise = "denoiser.streaming:run"


[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

# [dependency-groups]
# dev = [
#     "hatch>=1.16.2",
#     "black>=25.12.0",
#     "ruff>=0.14.9",
#     "tool>=0.8.0",
# ]

[tool.hatch.envs.dev]
dependencies = [
    "pytest",
    "black",
    "ruff",
    "mypy",
]

[tool.hatch.envs.dev.scripts]
# test = "pytest --exitfirst"
lint = "ruff check ."
format-fix = "black ."
