[project]
name = "models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.12.0",
    "certifi>=2025.11.12",
    "datasets>=4.4.1",
    "evaluate>=0.4.6",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    # "onnx>=1.20.0",
    # "onnxruntime>=1.23.2",
    # "optimum[exporters,onnxruntime]>=2.0.0",
    # "optimum-onnx>=0.0.3",
    # "torch>=2.2.2",
    # "onnxruntime>=1.23.2",
    # "transformers>=4.55.4",
    # "optimum-onnx[onnxruntime]>=0.0.3",
    # "optimum-onnx>=1.0.0",
    # "transformers>=4.57.3",
    # "transformers[torch]>=4.36.0",
    # "notebook>=7.5.0",
    # "coremltools>=9.0",
    # "pybind11>=2.12",
    # "transformers>=4.57.3",
    # "torch==2.2.2", # requires this version because of Mac
    "numpy<2",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "torch==2.2.2",
    "transformers[torch]>=4.57.3",
]
